fix imagens overlap no show game

--- a/src/app/shared/lib-card/lib-card.component.scss
+++ b/src/app/shared/lib-card/lib-card.component.scss
@@ -259,6 +259,7 @@ $red: #b22222;
         width: 650px;
     }
     .game-info>* {
+        min-height:320px;
         padding: 40px;
     }
     img {
